discussion/kv_engine/177834/177834_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Test performance with f14 vs std::unordered_map

Change-Id: I0edcfebe6b4d61d78d6a310ff48fd6f36cfb73b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-07-21 14:00:40.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-21 14:18:16.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22089/ : ABORTED

Failure of GoogleTest "MeteringTest.TTL_Expiry":

<pre>
[ RUN      ] MeteringTest.TTL_Expiry
[2022-07-21T14:04:50.169Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:2653: Failure
[2022-07-21T14:04:50.169Z] Expected equality of these values:
[2022-07-21T14:04:50.169Z]   cb::mcbp::Status::KeyEnoent
[2022-07-21T14:04:50.169Z]     Which is: Not found
[2022-07-21T14:04:50.169Z]   rsp.getStatus()
[2022-07-21T14:04:50.169Z]     Which is: Success
[2022-07-21T14:04:50.169Z] should have been TTL expired
[2022-07-21T14:04:50.169Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:2661: Failure
[2022-07-21T14:04:50.169Z] Expected equality of these values:
[2022-07-21T14:04:50.169Z]   1
[2022-07-21T14:04:50.169Z]   after["wu"].get<std::size_t>() - before["wu"].get<std::size_t>()
[2022-07-21T14:04:50.169Z]     Which is: 0
[2022-07-21T14:04:50.169Z] [  FAILED  ] MeteringTest.TTL_Expiry (901 ms)
MeteringTest.TTL_Expiry
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22089/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22089/ )

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/mc_time.cc:228 in mc_time_clock_tick()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22089/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20273/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20273/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19120/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:25:28: error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
    using StatMap = folly::F14FastMap<std::string, prometheus::MetricFamily>;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:30:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap high;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:31:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap low;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:32:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap metering;
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19120/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:25:28:
error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19120/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8806/ : FAILURE

Compile error at [2022-07-21T14:07:09.761Z] ../kv_engine/tests/statistics/prometheus_test.h:25:28:
error: no template named "F14FastMap" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8806/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18285/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47952/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40295/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8902/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21027/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21389/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29422/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
